# synthsib

./: LICENSE  README.md  framework_at_scale.py  hierarchical_adaptive.py  pipeline_benchmark.py  pyproject.toml  sampling_amplifier.py
synthsib/: __init__.py
synthsib/examples/: quickstart.py
synthsib/tests/: test_smoke.py
